--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=/home/gabriel/.netbeans/8.2/build.properties
+user.properties.file=/home/gabrieldev/.netbeans/8.2/build.properties
