--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/Locadora.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.21.jar=../../Downloads/mysql-connector-java-5.1.21.jar
 file.reference.sqljdbc4.jar=src\\libs\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.21.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -45,7 +47,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
