--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.jar=${dist.dir}/Locadora.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.17.jar=../../P\u00fablico/jcommon-1.0.17.jar
+file.reference.jfreechart-1.0.13.jar=../../P\u00fablico/jfreechart-1.0.13.jar
+file.reference.mysql-connector-java-5.1.21-bin.jar=../FinanceiroWeb/ePaperWeb/Hibernat/mysql-connector-java-5.1.21-bin.jar
 file.reference.mysql-connector-java-5.1.21.jar=../../Downloads/mysql-connector-java-5.1.21.jar
 file.reference.sqljdbc4.jar=src\\libs\\sqljdbc4.jar
 includes=**
@@ -36,7 +39,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.21.jar}
+    ${file.reference.mysql-connector-java-5.1.21.jar}:\
+    ${file.reference.mysql-connector-java-5.1.21-bin.jar}:\
+    ${file.reference.jcommon-1.0.17.jar}:\
+    ${file.reference.jfreechart-1.0.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
